# git-boy-3000

./: .env.example  .gitignore  BLUEPRINT.md  Dockerfile  PRD.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: FlavorSection.astro  Footer.astro  Header.astro  StatCard.astro
frontend/src/layouts/: Base.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
grafana/dashboards/: lethargy-sre.json
grafana/provisioning/dashboards/: dashboards.yml
loki/: loki-config.yml  promtail-config.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
otel/: collector.yaml
prometheus/: prometheus.yml
src/lethargy/: config.py  main.py
src/lethargy/api/: app.py  dependencies.py
src/lethargy/cache/: github_etag.py  lock.py  redis.py  sheet.py  throttle.py
src/lethargy/collector/: client.py  errors.py  fetch.py  rate_limit.py
src/lethargy/engine/: domain.py  registry.py
src/lethargy/obs/: logging.py  metrics.py  names.py  tracing.py
src/lethargy/persistence/: db.py  models.py  sheets.py  snapshots.py
src/lethargy/services/: errors.py  replay_service.py  sheet_service.py
tests/: conftest.py
tests/api/: test_health.py  test_sheet_routes.py
tests/collector/: test_rate_limit.py  test_snapshot_builder.py
tests/engine/: test_extract_v1.py  test_extract_v2.py  test_score_v1.py  test_score_v2.py
tests/persistence/: test_snapshots.py
tests/services/: test_sheet_service.py
(+15 files in other folders)
